<resources>
    <string name="app_name">SIPC-STORE</string>
    <string name="profile_nama">Sutan Iqbal Pramudya Chandra</string>
    <string name="postingan">25</string>
    <string name="post">Postingan</string>
    <string name="followers">200K</string>
    <string name="pengikut">Pengikut</string>
    <string name="mengikuti">56K</string>
    <string name="follow">Mengikuti</string>
    <string name="business">Business</string>
    <string name="promosikan">promosikan</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="follow_untuk_mengetahui_tentang_saya_lebih_banyak">Follow untuk mengetahui tentang saya lebih banyak</string>
    <string name="content_price">Rp13.799.000</string>
    <string name="content_text" >SEPEDA THRILL 29 RAVAGE ELITE MTB 29INCH GUNUNG</string>
    <string name="content_merek">Thrill</string>
    <string name="content_dimensi_produk">156 x 30 x 88 cm</string>
    <string name="content_deskripsi">
Frame (Bahan Rangka) : Alloy Internal Cable,
Fork (Garpu Depan) : Rockshock Judy TR-R Boost TA 100mm Remote Lockout,
Shifter (Pengoper Gigi) : Shimano Deore XT SL-M8000 1 x 11 Speed,
Rear Derailleur (Pemindah Gigi Belakang) : Shimano Deore XT SL-M8000 11 Speed,
Crankset (Poros Engkol) : Alloy 170mm 32T,
Bottom Bracket (As Engkol) : Hollowtech,
Cassette (Gigi Belakang) : 11-46,
Pedal : Alloy.
</string>
</resources>